# gearecs

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: Colliders.md  Components.md  Hierarchy.md  Layers.md  Registry.md  RigidBody.md  Scripting.md  Systems.md  World.md  index.html
docs/css/: cards.css  style.css
docs/examples/: components.html  defaults.html  entities.html  registry.html  rigidbody.html  rigidbody.js  rigidbody.wasm  rigidbody_collisions.html  rigidbody_collisions.js  rigidbody_collisions.wasm  scene_manager.html  scene_manager.js  scene_manager.wasm  scripts.html  scripts.js  scripts.wasm  sprites.html  sprites.js  sprites.wasm  systems.html  systems.js  systems.wasm
examples/: colliders.c  components.c  default_components.c  default_systems.c  entities.c  falsecs_defaults.c  gravity.c  hierarchy.c  readme.c  registry.c  rigidbody.c  rigidbody_collisions.c  scene_manager.c  scripts.c  sprites.c  systems.c
include/: gearecs.h
include/ecs/: component.h  entity.h  registry.h  system.h
include/falsecs/: gameobject.h  scene.h
include/gearecs/: gameobject.h  scene.h  world.h
include/mem/: array.h
include/scene/: manager.h
include/service/: layers.h
src/ecs/: registry.c
src/ecs/component/: behaviour.c  collider.c  entitydata.c  hierarchy.c  rigidbody.c
src/ecs/system/: behaviour.c  collider.c  rigidbody.c  sprite.c  transform.c
src/falsecs/: gameobject.c  scene.c
src/gearecs/: gameobject.c  scene.c  world.c
src/mem/: array.c
src/scene/: manager.c
src/service/: layers.c
